Bootstrap y Devise instalado

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
 
   <body>
     <%= render "home/navbar" %>
+    <br/>
     <div class="container">
+      <%= render "home/flash" %>
       <%= yield %>
     </div>
   </body>
