--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
   <div class="container-fluid">
-    <%= link_to "Cryto", root_path, class:"navbar-brand" %>
+    <%= link_to "Crypto", root_path, class:"navbar-brand" %>
     
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -11,6 +11,27 @@
         <li class="nav-item">
           <%= link_to "Nosotros", home_nosotros_path, class:"nav-link" %>
         </li>
+        <li class="nav-item">
+          <%= link_to "Lookup", home_lookup_path, class:"nav-link" %>
+        </li>
+        <% if user_signed_in? %>
+          <li class="nav-item">
+           <%= link_to "Salir", destroy_user_session_path, method: :delete, class:"nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Editar Perfil", edit_user_registration_path, class:"nav-link" %>
+          </li>
+        <% else %>
+
+          <li class="nav-item">
+            <%= link_to "Entrar", new_user_session_path, class:"nav-link" %>
+          </li>
+          
+          <li class="nav-item">
+            <%= link_to "Registrarse", new_user_registration_path, class:"nav-link" %>
+          </li>
+        <% end %>
+        
        
       </ul>
       <form class="d-flex">
