--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-success">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <%= link_to "Crypto", root_path, class:"navbar-brand" %>
     
@@ -12,15 +12,23 @@
           <%= link_to "Nosotros", home_nosotros_path, class:"nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Lookup", home_lookup_path, class:"nav-link" %>
+          <%= link_to "Listar", cryptos_path, class:"nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Buscar", home_lookup_path, class:"nav-link" %>
         </li>
         <% if user_signed_in? %>
+
+          <li class="nav-item">
+           <%= link_to "Agregar", new_crypto_path, class:"nav-link" %>
+          </li>
           <li class="nav-item">
            <%= link_to "Salir", destroy_user_session_path, method: :delete, class:"nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Editar Perfil", edit_user_registration_path, class:"nav-link" %>
           </li>
+
         <% else %>
 
           <li class="nav-item">
@@ -34,10 +42,7 @@
         
        
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-        <button class="btn btn-outline-light" type="submit">Buscar</button>
-      </form>
+      
     </div>
   </div>
 </nav>
