--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,26 +1,26 @@
 <div class="mb-3">
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Entrar", new_session_path(resource_name),class: "btn btn-success" %><br />
+  <%= link_to "Entrar", new_session_path(resource_name) %><br />
 <% end %>
 </div>
 <div class="mb-3">
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Registrarse", new_registration_path(resource_name),class: "btn btn-success" %><br />
+  <%= link_to "Registrarse", new_registration_path(resource_name) %><br />
 <% end %>
 </div>
 <div class="mb-3">
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Has olvidado tu clave?", new_password_path(resource_name),class: "btn btn-info" %><br />
+  <%= link_to "Has olvidado tu clave?", new_password_path(resource_name) %><br />
 <% end %>
 </div>
 <div class="mb-3">
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to "No has recibido la confirmación?", new_confirmation_path(resource_name), class: "btn btn-info" %><br />
+  <%= link_to "No has recibido la confirmación?", new_confirmation_path(resource_name) %><br />
 <% end %>
 </div>
 <div class="mb-3">
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <%= link_to "No has recibido las instracciones de desbloqueo?", new_unlock_path(resource_name), class: "btn btn-info" %><br />
+  <%= link_to "No has recibido las instracciones de desbloqueo?", new_unlock_path(resource_name) %><br />
 <% end %>
 </div>
 <div class="mb-3">
