--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -9,24 +9,24 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         
         <li class="nav-item">
-          <%= link_to "Nosotros", home_nosotros_path, class:"nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Listar", cryptos_path, class:"nav-link" %>
-        </li>
-        <li class="nav-item">
           <%= link_to "Buscar", home_lookup_path, class:"nav-link" %>
         </li>
+
+        <li class="nav-item">
+          <%= link_to "Portfolio", cryptos_path, class:"nav-link" %>
+        </li>
+        
         <% if user_signed_in? %>
 
           <li class="nav-item">
            <%= link_to "Agregar", new_crypto_path, class:"nav-link" %>
           </li>
-          <li class="nav-item">
-           <%= link_to "Salir", destroy_user_session_path, method: :delete, class:"nav-link" %>
-          </li>
+          
           <li class="nav-item">
             <%= link_to "Editar Perfil", edit_user_registration_path, class:"nav-link" %>
+          </li>
+          <li class="nav-item">
+           <%= link_to "Salir", destroy_user_session_path, method: :delete, class:"nav-link" %>
           </li>
 
         <% else %>
