--- a/app/views/cryptos/index.html.erb
+++ b/app/views/cryptos/index.html.erb
@@ -1,6 +1,6 @@
 
 <h1>Criptomonedas</h1>
-
+<div class="table-responsive">
 <table class="table table-bordered table-striped table-hover">
   <thead>
     <tr>
@@ -41,7 +41,7 @@
     <% end %>
   </tbody>
 </table>
-
+</div>
 <br/>
 <br/>
 <strong>Portfolio Ganancias/Perdidas: </strong> <%= number_to_currency(@ganapierde) %> 
