--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 <center><h1>LISTADO CRIPTOMONEDAS</h1></center>
 
 
-  
+<div class="table-responsive"> 
 
 <table class="table table-bordered table-striped table-hover">
   <thead>
@@ -38,4 +38,4 @@
     <% end %>
   </tbody>
 </table>
-
+</div>
